# fractalvisions

./: .gitignore  LICENSE  Makefile  README.md  fractalmv.cabal  fractalvisions.cabal  stack.yaml  vid.sh
src/: Circle.hi  Circle.hs  CircleArrayExample.hs  CircleBitmapExample.hs  CircleScaling.hs  DrawBitmap.hs  Fractal.hi  Fractal.hs  LOL.hs  Main.hs  Processing.hi  Processing.hs  Section.hs
