name:                fractalvisions
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fractalmv#readme
license:             BSD3
license-file:        LICENSE
author:              Fractal Visions
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fractalvisions
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Fractal
                     , Section
                     , Processing
                     , Circle
                     , CircleBitmapExample
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
                     , random
                     , array
                     , parallel
                     , colour
                     , ghc
